--- a/public/styles.css
+++ b/public/styles.css
@@ -16,6 +16,27 @@
 }
 
 /**
+ Sizes
+*/
+.width100
+{
+    width: 100vw;
+    max-height: 100vw;
+}
+
+.width75
+{
+    width: 75vw;
+    max-height: 90vh;
+}
+
+.width50
+{
+    width: 50vw;
+    max-width: 90vh;
+}
+
+/**
  Lists
 */
 .List
@@ -54,6 +75,10 @@
 {
     background-color: #121312;
 }
+.bgBlack75
+{
+    background-color: #121312cc;
+}
 .bgBlackLight
 {
     background-color: #333232;
@@ -65,6 +90,11 @@
 .bgWhiteGrey
 {
     background-color: #cecccc;
+}
+
+.shadowBlack
+{
+    box-shadow: 0.5em 0.5em 0 #121312;
 }
 
 /**
@@ -136,15 +166,29 @@
 .Window
 {
     position: fixed;
-    width: 50vw;
-    min-width: 200px;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     padding: 1em;
 }
 
-.bgShadowBlack
+.Screen
 {
-    box-shadow: 0.5em 0.5em 0 #121312;
+    position: fixed;
+    left: 0;
+    top: 0;
+}
+
+.screenContent75
+{
+    width: calc(100vw - 25vw);
+    height: calc(100vh - 5vh);
+    padding: 2.5vh 12.5vw;
+}
+
+.screenTitle
+{
+    position: fixed;
+    left: 12.5vw;
+    bottom: 1vh;
 }
